--- a/src/Components/CardSection/styles.css
+++ b/src/Components/CardSection/styles.css
@@ -1,4 +1,40 @@
+.grid-container {
+  border: 2px solid red;
+  height: 100vh;
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr 20px repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 3rem;
+  overflow: clip;
+}
 
+.bg-gradient {
+  background-image: url("src/assets/images/bg-main-desktop.png");
+  background-repeat: no-repeat;
+  object-fit: cover;
+  grid-row: 1 / 3;
+  grid-column: 1 / 4;
+}
+
+.card-front {
+  background-image: url("src/assets/images/bg-card-front.png");
+  grid-column: 2 / 5;
+  grid-row: 1 / 2;
+  width: 447px;
+  height: 245px;
+  align-self: end;
+}
+
+.card-back {
+  background-image: url("src/assets/images/bg-card-back.png");
+  grid-column: 3 / 6;
+  grid-row: 2 / 3;
+  width: 447px;
+  height: 245px;
+}
+
+/* 
 
 .border-box{
  
@@ -57,4 +93,4 @@
     top: 20%;
     left: 30%;
     transform: translate(-50%, -50%);
-}
+} */
