--- a/src/Components/CardSection/styles.css
+++ b/src/Components/CardSection/styles.css
@@ -65,9 +65,8 @@
   color: white;
   text-align: center;
   width: 100%;
-  letter-spacing: 0.75rem;
-  font-size: large;
-}
+  letter-spacing: 0.65rem;
+  font-size: large;}
 
 .name-exp {
   color: white;
