--- a/src/Components/CardSection/styles.css
+++ b/src/Components/CardSection/styles.css
@@ -1,5 +1,5 @@
 .grid-container {
-  height: 100vh;
+  min-height: 100vh;
   width: 50%;
   display: grid;
   grid-template-columns: 1fr 20px repeat(3, 1fr);
@@ -12,9 +12,12 @@
 .bg-gradient {
   background-image: url("src/assets/images/bg-main-desktop.png");
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   object-fit: cover;
   grid-row: 1 / 3;
   grid-column: 1 / 4;
+  height: 100%;
+
 }
 
 .card-front {
