--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+
 body {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-style: normal;
+    height: 100vh;
+    margin: 0;
+
 }
 
 input, button {
