--- a/src/Components/FormComplete/FormComplete.css
+++ b/src/Components/FormComplete/FormComplete.css
@@ -1,8 +1,13 @@
+.form-complete-container {
+    display: flex;
+    justify-content: center;
+}
+
 .form-complete {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 100%;
     font-weight: 500;
     color: hsl(278, 21%, 58%);
