--- a/src/Components/CardDetailsForm/styles.css
+++ b/src/Components/CardDetailsForm/styles.css
@@ -1,11 +1,15 @@
 .card-form-container {
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  /* width: 100%; */
-  /* border: 1px solid rgb(143, 11, 33); */
+  border: 1px solid yellow;
 }
+
+@media screen and (max-width: 800px) {
+  .card-form-container {
+    height: 70vh;
+  }
+  }
 
 .card-form {
   display: flex;
