--- a/src/Components/DesktopLayout/styles.css
+++ b/src/Components/DesktopLayout/styles.css
@@ -3,3 +3,9 @@
     flex-direction: row;
     height: 100vh;
 }
+
+@media screen and (max-width: 800px) {
+.desktop-container {
+    flex-direction: column;
+}
+}
