--- a/src/Components/CardDetailsForm/styles.css
+++ b/src/Components/CardDetailsForm/styles.css
@@ -1,3 +1,5 @@
+
+
 .card-form-container {
   display: flex;
   justify-content: center;
@@ -5,9 +7,11 @@
   border: 1px solid yellow;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
   .card-form-container {
-    height: 70vh;
+    width: 100vw;
+    max-width: 500px;
+    margin: auto;
   }
   }
 
@@ -19,6 +23,13 @@
   width: 500px;
   /* border: 1px solid black; */
 }
+@media screen and (max-width: 500px) {
+  .card-form {
+    width: 100%;
+
+  }
+  }
+
 
 .exp-cvc {
   display: flex;
