--- a/src/Components/CardSection/styles.css
+++ b/src/Components/CardSection/styles.css
@@ -12,9 +12,9 @@
 }
 
 @media screen and (max-width: 800px) {
-  .grid-container {
-    min-height: 30vh;
-  }
+    .grid-container {
+      min-height: 60vh;
+    }
   }
 
 .bg-gradient {
@@ -25,7 +25,14 @@
   grid-row: 1 / 3;
   grid-column: 1 / 4;
   height: 100%;
+}
 
+@media screen and (max-width: 800px) {
+  
+  .bg-gradient {
+    grid-row: 1 / 3;
+    grid-column: 1 / 6;
+  }
 }
 
 .card-front {
@@ -38,6 +45,15 @@
   position: relative;
 }
 
+@media screen and (max-width: 800px) {
+  .card-front {
+    grid-column: 1 / 5;
+    grid-row: 2 / 2;
+    margin-bottom: 300px;
+    margin-left: 70px;
+  }
+}
+
 .card-back {
   background-image: url("src/assets/images/bg-card-back.png");
   grid-column: 3 / 6;
@@ -46,6 +62,15 @@
   height: 245px;
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .card-back {
+    grid-column: 3 / 6;
+    grid-row: 1 / 5;
+    margin-top: 100px;
+    margin-right: 100px;
+  }
 }
 
 .white-ball {
