--- a/src/Components/DesktopLayout/styles.css
+++ b/src/Components/DesktopLayout/styles.css
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
+    width: 100vw;
+
 }
 
 @media screen and (max-width: 800px) {
 .desktop-container {
+
     flex-direction: column;
+
 }
 }
